# StarGBC

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
dependencies/: CMakeLists.txt
includes/: Audio.h  Auxiliary.h  Bus.h  CPU.h  Cartridge.h  Common.h  DMA.h  GPU.h  Gameboy.h  HDMA.h  Instructions.h  Interrupts.h  Joypad.h  Memory.h  RealTimeClock.h  Registers.h  Serial.h  Timer.h
src/: Audio.cpp  Bus.cpp  CMakeLists.txt  CPU.cpp  Cartridge.cpp  DMA.cpp  GPU.cpp  Gameboy.cpp  HDMA.cpp  Instructions.cpp  Interrupts.cpp  Joypad.cpp  Memory.cpp  RealTimeClock.cpp  Serial.cpp  Timer.cpp  main.cpp
tests/: CMakeLists.txt  InstructionTests.h  TestRoms.h  ThreadContext.h  main.cpp  tests.cpp
tests/expected/blargg/: interrupt_time.gb.screen
tests/expected/blargg/cgb_sound/: 08-len ctr during power.gb.screen  09-wave read while on.gb.screen  10-wave trigger while on.gb.screen  12-wave.gb.screen
tests/expected/blargg/cpu_instrs/: 01-special.gb.screen  02-interrupts.gb.screen  03-op sp,hl.gb.screen  04-op r,imm.gb.screen  05-op rp.gb.screen  06-ld r,r.gb.screen  07-jr,jp,call,ret,rst.gb.screen  08-misc instrs.gb.screen  09-op r,r.gb.screen  10-bit ops.gb.screen  11-op a,(hl).gb.screen
tests/expected/blargg/dmg_sound/: 03-trigger.gb.screen  09-wave read while on.gb.screen  10-wave trigger while on.gb.screen  12-wave write while on.gb.screen
tests/expected/blargg/mem_timing/: 01-read_timing.gb.screen  03-modify_timing.gb.screen
tests/expected/blargg/mem_timing-2/: 02-write_timing.gb.screen
tests/expected/blargg/oam_bug/: 1-lcd_sync.gb.screen  2-causes.gb.screen  3-non_causes.gb.screen  4-scanline_timing.gb.screen  5-timing_bug.gb.screen  6-timing_no_bug.gb.screen  8-instr_effect.gb.screen
tests/mocks/: CMakeLists.txt  MockBus.cpp  MockBus.h  MockCPU.cpp  MockCPU.h
